# New-CS236-Project_1

./: Automaton.h  CMakeLists.txt  main.cpp
